force-app/main/default/objects/Job_Contact__c/Job_Contact__c.object-meta.xml
<CustomObject>
    <label>Job Contact</label>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>Job Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>