force-app/main/default/objects/Job_Contact__c/fields/Hiring_Role__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Role__c</fullName>
    <label>Hiring Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Recruiting Coordinator</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Peer Interviewer</fullName>
            </value>
            <value>
                <fullName>Executive Interviewer</fullName>
            </value>
            <value>
                <fullName>HR/People Partner</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>