force-app/main/default/objects/Job_Contact__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Job Contacts</relationshipLabel>
    <relationshipName>Job_Contacts</relationshipName>
    <type>MasterDetail</type>
</CustomField>