force-app/main/default/objects/Job_Contact__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>