force-app/main/default/objects/Job_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Application__c</columns>
    <columns>Contact__c</columns>
    <columns>Hiring_Role__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>